--- a/src/index.html
+++ b/src/index.html
@@ -77,17 +77,17 @@
             </div>
             <div class="advantages__coments">
                 <div class="advantages__text">
-                    Наши сотрудники всегда готовы <br> поделиться своим опытом, <br>
-                    так как сами бегают полумарафоны, <br> переплыли Босфор, готовятся к <br> соревнованиям по триатлону!
+                    Наши сотрудники всегда готовы  поделиться своим опытом, 
+                    так как сами бегают полумарафоны,  переплыли Босфор, готовятся к  соревнованиям по триатлону!
                 </div>
                 <div class="advantages__text">
-                    Мы работаем для того, <br> 
-                    чтобы Ваши занятия спортом шли на <br> пользу Вашему здоровью и были в <br> радость Вам и Вашим близким!
+                    Мы работаем для того,  
+                    чтобы Ваши занятия спортом шли на  пользу Вашему здоровью и были в  радость Вам и Вашим близким!
                 </div>
                 <div class="advantages__text">
-                    Помогаем с обучением <br>
-                    правильной технике бега! <br>
-                    Дружим с крупнейшей школой бега в <br> России
+                    Помогаем с обучением 
+                    правильной технике бега! 
+                    Дружим с крупнейшей школой бега в  России
                     <a href="#">-i love running</a> 
                 </div>
             </div>
