--- a/src/index.html
+++ b/src/index.html
@@ -58,40 +58,40 @@
     </div>
     <div class="advantages">
         <div class="container">
-            <h2 class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</h2>
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="advantages__wrapper">
-                <div class="advantages__icons">
-                    <div class="advantages__icon">
-                        <img src="icons/cup.png" alt="cup">
-                        Делимся опытом
-                    </div>
-                    <div class="advantages__icon">
-                        <img src="icons/heart.png" alt="heart">
+                <div class="advantages__item">
+                        <img src="icons/cup.png" alt="cup" class="advantages__icon">
+                        <div class="advantages__subtitle"> Делимся опытом
+                        </div>
+                        <div class="advantages__descr">
+                            Наши сотрудники всегда готовы поделиться своим опытом, 
+                            так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+                        </div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/heart.png" alt="heart" class="advantages__icon">
+                    <div class="advantages__subtitle">
                         Заботимся о здоровье
                     </div>
-                    <div class="advantages__icon">
-                        <img src="icons/shoe.png" alt="shoe">
-                        Учим бегать
+                    <div class="advantages__descr">Мы работаем для того, 
+                        чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!           
                     </div>
                 </div>
+                <div class="advantages__item">
+                    <img src="icons/shoe.png" alt="shoe" class="advantages__icon">
+                    <div class="advantages__subtitle">
+                        Учим бегать
+                    </div>
+                    <div class="advantages__descr">
+                        Помогаем с обучением 
+                        правильной технике бега!<br>
+                        Дружим с крупнейшей школой бега в России - 
+                        <a href="#">i love running</a> 
+                    </div>
+                </div>                    
             </div>
-            <div class="advantages__coments">
-                <div class="advantages__text">
-                    Наши сотрудники всегда готовы  поделиться своим опытом, 
-                    так как сами бегают полумарафоны,  переплыли Босфор, готовятся к  соревнованиям по триатлону!
-                </div>
-                <div class="advantages__text">
-                    Мы работаем для того,  
-                    чтобы Ваши занятия спортом шли на  пользу Вашему здоровью и были в  радость Вам и Вашим близким!
-                </div>
-                <div class="advantages__text">
-                    Помогаем с обучением 
-                    правильной технике бега! 
-                    Дружим с крупнейшей школой бега в  России
-                    <a href="#">-i love running</a> 
-                </div>
-            </div>
-        </div>
+        </div>                    
     </div>
 </body>
 </html>
