--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/slick.css"> <!-- подключение слайдера -->
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -186,7 +185,7 @@
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/polar_puls.png" alt="pulsometr" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT4</div>
-                            <div class="catalog-item__descr">Улучшенная версия Polar FT1, имеющая следующие улучшения:</div>        
+                            <div class="catalog-item__descr">Улучшенная версия Polar FT1, имеющая следующие улучшения: </div>        
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>                
                         </div>
                         <div class="catalog-item__list">
@@ -458,9 +457,9 @@
     <a href="#up" class="pageup">
         <img src="icons/up.svg" alt="up">
     </a>
-   
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script> <!-- подключение библиотеки jquery -->
-    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script> <!-- подключение библиотеки jquery -->
+    
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script> <!-- подключение самого слайдера -->
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>  <!-- маска ввода номера -->
